AI Refactor for techsur-rfp-ai-service-development/src/test/java/solutions/techsur/rfpaiservice/api/ComplianceMatrixControllerTest.java:
Changes:
- Replaced incorrect use of `anyInt` as actual method argument with concrete values in test method calls to avoid Mockito matcher misuse.
- Updated variable and method argument names for clarity and alignment with typical test usage.
- Added relevant imports for `Collections` due to use of `Collections.singletonList`.
- Simplified list creation with `Collections.singletonList` for single elements to improve readability.
- Improved readability of test methods by removing ambiguous `anyInt` as input and specifying concrete values.
- Enhanced test assertions with better clarity on expected values.
- Improved formatting and spacing for consistency and clarity.