@@ -17,11 +17,14 @@ import solutions.techsur.rfpaiservice.dto.CreationDTO;
 import solutions.techsur.rfpaiservice.entity.ComplianceMatrix;
 import solutions.techsur.rfpaiservice.service.ComplianceMatrixService;
 
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 
@@ -35,20 +38,20 @@ public class ComplianceMatrixControllerTest {
     private ComplianceMatrixController controller;
 
     private ComplianceMatrix complianceMatrix;
-    private List<ComplianceMatrixRequest> complianceMatrixRequest;
+    private List<ComplianceMatrixRequest> complianceMatrixRequests;
 
     @BeforeEach
     void setUp() {
         complianceMatrix = new ComplianceMatrix();
         complianceMatrix.setId(1);
-        complianceMatrixRequest = List.of(new ComplianceMatrixRequest());
+        complianceMatrixRequests = Collections.singletonList(new ComplianceMatrixRequest());
     }
 
     @Test
     void testCreateComplianceMatrices() {
-        when(service.createComplianceMatrix(anyInt(), anyList())).thenReturn(List.of(complianceMatrix));
+        when(service.createComplianceMatrix(anyInt(), anyList())).thenReturn(Collections.singletonList(complianceMatrix));
 
-        ResponseEntity<List<CreationDTO>> response = controller.createComplianceMatrices(anyInt(), complianceMatrixRequest);
+        ResponseEntity<List<CreationDTO>> response = controller.createComplianceMatrices(1, complianceMatrixRequests);
 
         assertEquals(201, response.getStatusCodeValue());
         assertFalse(response.getBody().isEmpty());
@@ -66,10 +69,10 @@ public class ComplianceMatrixControllerTest {
 
     @Test
     void testGetComplianceMatrixPage() {
-        Page<ComplianceMatrix> page = new PageImpl<>(List.of(complianceMatrix));
-        when(service.getComplianceMatrixPage(any(), any(), anyInt())).thenReturn(page);
+        Page<ComplianceMatrix> page = new PageImpl<>(Collections.singletonList(complianceMatrix));
+        when(service.getComplianceMatrixPage(any(CommonFilter.class), any(PageRequest.class), anyInt())).thenReturn(page);
 
-        ResponseEntity<Page<ComplianceMatrix>> response = controller.getComplianceMatrixPage(new CommonFilter(), PageRequest.of(0, 10), anyInt());
+        ResponseEntity<Page<ComplianceMatrix>> response = controller.getComplianceMatrixPage(new CommonFilter(), PageRequest.of(0, 10), 1);
 
         assertEquals(200, response.getStatusCodeValue());
         assertFalse(response.getBody().isEmpty());
@@ -79,7 +82,7 @@ public class ComplianceMatrixControllerTest {
     void testUpdateComplianceMatrix() {
         doNothing().when(service).updateComplianceMatrix(any(), anyInt());
 
-        ResponseEntity<Void> response = controller.updateComplianceMatrix(1, complianceMatrixRequest);
+        ResponseEntity<Void> response = controller.updateComplianceMatrix(1, complianceMatrixRequests);
 
         assertEquals(200, response.getStatusCodeValue());
     }
